syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "avenue/financial/protobuf/core/core_messages_description.proto";


option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.estimate";
option java_outer_classname = "EstimateMessagesDescriptionProto";

package avenue.financial.protobuf.estimate;

message EstimateProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MetaProto meta = 2;
  avenue.financial.protobuf.core.MiniUserProto owner = 3;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 4;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 5;
  EstimateInfoProto estimate_info = 6;

}

message EstimateInfoProto{
  google.protobuf.StringValue estimate_number = 1;
  google.protobuf.StringValue po_so_number = 2;
  google.protobuf.StringValue estimate_date = 3;
  google.protobuf.StringValue customer_id = 4;
  google.protobuf.StringValue payment_term_id = 5;
  google.protobuf.StringValue notes = 6;
  google.protobuf.DoubleValue sub_total = 7;
  google.protobuf.DoubleValue tax_total = 8;
  google.protobuf.DoubleValue total = 9;
}
message AddEstimateProto{

  avenue.financial.protobuf.core.MiniUserProto owner = 1;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 2;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 3;
  EstimateInfoProto estimate_info = 4;
  repeated EstimateItemProto items = 5;


}

message UpdateEstimateProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MiniUserProto owner = 2;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 3;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 4;
  EstimateInfoProto estimate_info = 5;
}

message EstimateItemProto{
  google.protobuf.StringValue estimate_id = 1;
  google.protobuf.StringValue product_id = 2;
  google.protobuf.Int32Value quantity = 3;
  google.protobuf.StringValue uom = 4;
  google.protobuf.DoubleValue price = 5;
  google.protobuf.StringValue tax1_id = 6;
  google.protobuf.StringValue tax2_id = 7;

}
enum PaymentStatusProto{
  UNPAID = 0;
  PARTIAL_PAID = 1;
  PAID = 2;

}




